--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 Revision history for Geo::Forward
 
+2006-10-30 v0.02
+  * updated Makefile.PL
+  * updated t/base.t
+  * moved Geo to lib folder
 2006-10-30 v0.01
   * Original version
