--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,10 @@
 Revision history for Geo::Forward
 
+2006-11-04 v0.04
+  * Documentation
+2006-10-30 v0.03
+  * updated t/base.t
+  * updated pod example
 2006-10-30 v0.02
   * updated Makefile.PL
   * updated t/base.t
