--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
-Revision history for Geo::Forward
-
+2006-11-29 v0.07
+  * Documentation
+  * use Geo::Ellipsoids for a and f values
 2006-11-04 v0.04
   * Documentation
 2006-10-30 v0.03
