--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+2006-12-02 v0.09
+  * Added Geo::Constants for PI, DEG, RAD
+2006-11-29 v0.08
+  * Documentation
 2006-11-29 v0.07
   * Documentation
   * use Geo::Ellipsoids for a and f values
