--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+2006-12-08 v0.10
+  * Merged set and ellipsoid methods
 2006-12-02 v0.09
   * Added Geo::Constants for PI, DEG, RAD
 2006-11-29 v0.08
